# homework2

./: .deploy.sh  .travis.yml  CMakeLists.txt  README.md  filtration_by_any_byte.cpp  filtration_by_any_byte_test.cpp  filtration_by_first_and_second_bytes.cpp  filtration_by_first_and_second_bytes_test.cpp  filtration_by_first_byte.cpp  filtration_by_first_byte_test.cpp  homework.hpp  homework_test.hpp  input_test.cpp  lexicographical_reverse.cpp  lexicographical_reverse_test.cpp  main.cpp  test_homework.cpp  utils.hpp
.travis/: .yml
